--- a/frontend/src/style/Room.css
+++ b/frontend/src/style/Room.css
@@ -230,3 +230,37 @@
   margin: 0 auto;
   margin-top: 350px;
 }
+.messages {
+  overflow-y: auto;
+  height: 100%;
+  width: 100%;
+}
+.message_user {
+  font-size: 20px;
+  margin-right: 10px;
+}
+.message_time {
+  color: #9e9e9e;
+  font-size: 12px;
+}
+.message_text {
+  font-size: 18px;
+  color: #fff;
+  word-break: break-all;
+}
+.message_data {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.message_wrapper {
+  max-width: 50%;
+}
+.message {
+  margin-top: 10px;
+  width: 100%;
+  display: flex;
+}
+.message_u_true {
+  justify-content: flex-end;
+}
