--- a/frontend/src/style/Room.css
+++ b/frontend/src/style/Room.css
@@ -225,6 +225,18 @@
   border: 1.2px solid #c6c6c6;
 }
 
+input:disabled {
+  color: #676767;
+  border: 1.5px solid #676767;
+  background: #676767;
+}
+input:disabled:placeholder {
+  color: #676767;
+}
+input:disabled:hover {
+  color: #676767;
+  border: 1.5px solid #676767;
+}
 .auth_form_wrapper {
   height: 100%;
   margin: 0 auto;
@@ -263,4 +275,8 @@
 }
 .message_u_true {
   justify-content: flex-end;
+}
+
+.not_key{
+  font-size: 24px
 }
